[gd_scene load_steps=3 format=3 uid="uid://it7tkqalh8sl"]

[ext_resource type="Script" path="res://scripts/ui/title_screen.gd" id="1_h5ujc"]
[ext_resource type="Theme" uid="uid://dtx7m8o163hvs" path="res://shaders/ui_theme.tres" id="1_pwr0y"]

[node name="Control" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_pwr0y")
script = ExtResource("1_h5ujc")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.862582, 0.844046, 0.829477, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 152.0
offset_top = 216.0
offset_right = 612.0
offset_bottom = 423.0
theme_override_font_sizes/font_size = 300
text = "biofuel"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 808.0
offset_top = 224.0
offset_right = 1126.0
offset_bottom = 384.0

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.419813, 0.419813, 0.419813, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "(g)=>"
flat = true

[node name="NewButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "+(g)"
flat = true

[node name="CloseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "x(g)"
flat = true

[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_continue_game"]
[connection signal="pressed" from="VBoxContainer/NewButton" to="." method="_on_new_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
